# orm-importer

./: .gitignore  .gitmodules  README.md  app.py  build_ppg.bat  build_ppg.sh  converter.py  pyproject.toml  rail_types.py  requirements.txt  utils.py
.github/workflows/: python-app.yml
orm_importer/: converter.py  importer.py  utils.py
orm_planpro_converter/: converter.py  rail_types.py  utils.py
planprogenerator/: __init__.py  generator.py
planprogenerator/model/: __init__.py  edge.py  node.py  route.py  signal.py  trip.py
planprogenerator/planproxml/: __init__.py  edgexml.py  nodexml.py  rootxml.py  routexml.py  signalxml.py  tripxml.py
templates/: index.html
tests/: test_converter.py
tests/mock_data/: griebnitzsee_req.txt
