[tool.poetry]
name = "orm-planpro-converter"
version = "0.1.0"
description = "This tool converts data from OpenRailwayMap into the PlanPro format."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "orm_planpro_converter"}]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "21.4.0"
click = "8.1.3"
flask = "2.1.3"
gunicorn = "20.1.0"
importlib-metadata = "4.12.0"
iniconfig = "1.1.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
mock = "4.0.3"
networkx = "2.8.4"
numpy = "1.23.1"
overpy = "0.6"
packaging = "21.3"
pluggy = "1.0.0"
py = "1.11.0"
pyparsing = "3.0.9"
pytest = "7.1.2"
tomli = "2.0.1"
werkzeug = "2.1.2"
zipp = "3.8.1"
planprogenerator = {git = "https://github.com/rohansaw/planpro-generator.git", rev = "main"}
railway-route-generator = {git = "https://github.com/arneboockmeyer/railway-route-generator"}
six = "^1.16.0"
lxml = "^4.9.1"
haversine = "^2.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
