[tool.poetry]
name = "orm-importer"
version = "1.1.0"
description = "This tool converts data from OpenRailwayMap into yaramo models."
authors = ["OSM@HPI <no-reply-osm@hpi.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "orm_importer"}]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "21.4.0"
click = "8.1.3"
importlib-metadata = "4.12.0"
iniconfig = "1.1.1"
itsdangerous = "2.1.2"
markupsafe = "2.1.1"
mock = "4.0.3"
networkx = "2.8.6"
numpy = "^1.26.3"
overpy = "0.6"
packaging = "21.3"
pluggy = "1.0.0"
py = "1.11.0"
pyparsing = "3.0.9"
pytest = "7.1.2"
tomli = "2.0.1"
zipp = "3.8.1"
six = "^1.16.0"
lxml = "^4.9.0"
haversine = "^2.7.0"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo"}



[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint.format]
max-line-length = "100"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
